--- a/content/en/tech/2.Telemetry Data Pipeline/3.Vehicle Event/2.dataSchema.md
+++ b/content/en/tech/2.Telemetry Data Pipeline/3.Vehicle Event/2.dataSchema.md
@@ -3,5 +3,81 @@ title: Data Schema
 description: Data Schema
 links: []
 navigation:
-  icon: 
+  icon:
 ---
+
+# Event List
+
+## Application-defined Events (10)
+
+| Function Name      | Source | Function Domain Code | Custom Event Code | Event Code | Description                            |
+| ------------------ | ------ | -------------------- | ----------------- | ---------- | -------------------------------------- |
+| App Runtime Status | 10     | 00 (AppLife)         | 01                | 100001     | App Start                              |
+| App Runtime Status | 10     | 00 (AppLife)         | 02                | 100002     | App Restart                            |
+| App Runtime Status | 10     | 00 (AppLife)         | 03                | 100003     | App Stop                               |
+| Network Status     | 10     | 01 (Network)         | 01                | 100101     | Mobile Network Connected               |
+| Network Status     | 10     | 01 (Network)         | 02                | 100102     | WiFi Connected                         |
+| Network Status     | 10     | 01 (Network)         | 03                | 100103     | Network Available                      |
+| Network Status     | 10     | 01 (Network)         | 04                | 100104     | Network Unavailable                    |
+| Upload Service     | 10     | 02 (UploadService)   | 01                | 100201     | MonitorActivity Started Upload Service |
+| IoT Status         | 10     | 03 (IOT)             | 01                | 100301     | Connecting to Azure IoT                |
+| IoT Status         | 10     | 03 (IOT)             | 02                | 100302     | Upload Service Started                 |
+
+---
+
+## CAN-triggered Events (11)
+
+| Function Name | Source | Function Domain Code | Custom Event Code (CC) | Event Code | Description    |
+| ------------- | ------ | -------------------- | ---------------------- | ---------- | -------------- |
+| CAN Power     | 11     | 01 (Power)           | 00                     | 110100     | POM_PARK       |
+| CAN Power     | 11     | 01 (Power)           | 01                     | 110101     | POM_LIVING     |
+| CAN Power     | 11     | 01 (Power)           | 02                     | 110102     | POM_IMMO       |
+| CAN Power     | 11     | 01 (Power)           | 03                     | 110103     | POM_PRERUNNING |
+| CAN Power     | 11     | 01 (Power)           | 04                     | 110104     | POM_CRANKING   |
+| CAN Power     | 11     | 01 (Power)           | 05                     | 110105     | POM_RUNNING    |
+| CAN Power     | 11     | 01 (Power)           | 06                     | 110106     | POM_SHUTDOWN   |
+| CAN Power     | 11     | 02 (Power)           | 01                     | 110201     | KEY_ON         |
+| CAN Power     | 11     | 02 (Power)           | 02                     | 110202     | KEY_OFF        |
+
+## Iothub Config
+
+```
+{
+    "properties.desired.vehicle": {
+        "events": {
+            "1102": {
+                "canId": "1818F78741",
+                "max": 4294967295,
+                "min": 0,
+                "size": 32,
+                "unit": "s",
+                "start": 8,
+                "factor": 1,
+                "offset": 0,
+                "receiver": "ZB_NECU",
+                "precision": 0,
+                "endianness": 1
+            }
+        }
+    }
+}
+```
+
+## Real Data
+
+```
+[
+    [
+        {
+            "type": "110201"
+        },
+        1770860653829
+    ],
+    [
+        {
+            "type": "110202"
+        },
+        1770860653692
+    ]
+]
+```
