--- a/content/en/tech/2.Telemetry Data Pipeline/3.Vehicle Event/2.dataSchema.md
+++ b/content/en/tech/2.Telemetry Data Pipeline/3.Vehicle Event/2.dataSchema.md
@@ -8,9 +8,9 @@ navigation:
 
 # Event List
 
-## Application-defined Events (10)
+## 1. Application-defined Events (10)
 
-| Function Name      | Source | Function Domain Code | Custom Event Code | Event Code | Description                            |
+| Source Name        | Source | Function Domain Code | Custom Event Code | Event Code | Description                            |
 | ------------------ | ------ | -------------------- | ----------------- | ---------- | -------------------------------------- |
 | App Runtime Status | 10     | 00 (AppLife)         | 01                | 100001     | App Start                              |
 | App Runtime Status | 10     | 00 (AppLife)         | 02                | 100002     | App Restart                            |
@@ -25,59 +25,125 @@ navigation:
 
 ---
 
-## CAN-triggered Events (11)
+## 2. CAN-triggered Events (11)
 
-| Function Name | Source | Function Domain Code | Custom Event Code (CC) | Event Code | Description    |
-| ------------- | ------ | -------------------- | ---------------------- | ---------- | -------------- |
-| CAN Power     | 11     | 01 (Power)           | 00                     | 110100     | POM_PARK       |
-| CAN Power     | 11     | 01 (Power)           | 01                     | 110101     | POM_LIVING     |
-| CAN Power     | 11     | 01 (Power)           | 02                     | 110102     | POM_IMMO       |
-| CAN Power     | 11     | 01 (Power)           | 03                     | 110103     | POM_PRERUNNING |
-| CAN Power     | 11     | 01 (Power)           | 04                     | 110104     | POM_CRANKING   |
-| CAN Power     | 11     | 01 (Power)           | 05                     | 110105     | POM_RUNNING    |
-| CAN Power     | 11     | 01 (Power)           | 06                     | 110106     | POM_SHUTDOWN   |
-| CAN Key       | 11     | 02 (Key)             | 01                     | 110201     | KEY_ON         |
-| CAN Key       | 11     | 02 (Key)             | 02                     | 110202     | KEY_OFF        |
+| Source Name | Source | Function Domain Code | Custom Event Code (CC) | Event Code | Description    |
+| ----------- | ------ | -------------------- | ---------------------- | ---------- | -------------- |
+| CAN         | 11     | 01 (Power)           | 00                     | 110100     | POM_PARK       |
+| CAN         | 11     | 01 (Power)           | 01                     | 110101     | POM_LIVING     |
+| CAN         | 11     | 01 (Power)           | 02                     | 110102     | POM_IMMO       |
+| CAN         | 11     | 01 (Power)           | 03                     | 110103     | POM_PRERUNNING |
+| CAN         | 11     | 01 (Power)           | 04                     | 110104     | POM_CRANKING   |
+| CAN         | 11     | 01 (Power)           | 05                     | 110105     | POM_RUNNING    |
+| CAN         | 11     | 01 (Power)           | 06                     | 110106     | POM_SHUTDOWN   |
+| CAN         | 11     | 02 (Key)             | 1                      | 11021      | KEY_ON         |
+| CAN         | 11     | 02 (Key)             | 2                      | 11022      | KEY_OFF        |
 
-## Iothub Config
+## 3. Config & Decode
 
-```
+### 3.1 IoT Hub Config – Field Explanation (Updated)
+
+Example IoT Hub configuration:
+
+```json
 {
-    "properties.desired.vehicle": {
-        "events": {
-            "1102": {
-                "canId": "1818F78741",
-                "max": 4294967295,
-                "min": 0,
-                "size": 32,
-                "unit": "s",
-                "start": 8,
-                "factor": 1,
-                "offset": 0,
-                "receiver": "ZB_NECU",
-                "precision": 0,
-                "endianness": 1
-            }
-        }
+  "properties.desired.vehicle": {
+    "events": {
+      "1102": "1818F78741_8_32"
     }
+  }
 }
 ```
 
-## Real Data
+#### 3.1.1 Event Alias: `1102`
 
+`1102` is a custom vehicle event alias defined in the IoT Hub configuration.
+
+- **Source**: `11` (CAN)
+- **Function Domain Code**: `02` (Key)
+
+The device reports decoded signal values using this alias.
+
+#### 3.1.2 CAN Signal Definition: `1818F78741_8_32`
+
+Where:
+
+- `1818F78741` = CAN ID (0x1818F78741)
+- `8` = Start bit
+- `32` = Signal length (in bits)
+
+This means:
+
+The system monitors CAN messages with ID `0x1818F78741`, extracts a 32-bit signal starting from bit 8, and uses the decoded value to determine which event under alias `1102` (KEY_ON or KEY_OFF) should be triggered.
+
+## 3.2 Decoder Configuration Structure
+
+In Table decoder_params:
+
+- msg_type = "vehicle_event"
+
+- param_id = "1102"
+
+Example contents:
+
+```json
+{
+  "1": {
+    "eventCode": "11021",
+    "eventName": "KEY_ON"
+  },
+  "2": {
+    "eventCode": "11022",
+    "eventName": "KEY_OFF"
+  }
+}
 ```
+
+## 3.3 Decoding Logic
+
+When the cloud receives:
+
+```json
 [
-    [
-        {
-            "type": "110201"
-        },
-        1770860653829
-    ],
-    [
-        {
-            "type": "110202"
-        },
-        1770860653692
-    ]
+  [{ "1102": 1 }, 1770860653829],
+  [{ "1102": 2 }, 1770860653692]
 ]
 ```
+
+Where:
+
+- `1102` = event alias (signal identifier)
+
+- `1, 2` = numeric signal values
+
+- `1770860653829` = timestamp (milliseconds)
+
+Decoding steps:
+
+1. Read param_id = 1102
+
+2. Load the valueMap
+
+3. Map numeric values:
+   - 1 → eventCode = 11021 → KEY_ON
+   - 2 → eventCode = 11022 → KEY_OFF
+
+4. Generate the final event:
+
+```json
+{
+  "eventCode": 11021,
+  "eventName": "KEY_ON",
+  "timestamp": 1770860653829
+}
+```
+
+## 3.4 Design Advantages
+
+- Device only sends numeric values, saving bandwidth
+
+- Business semantics are fully configuration-driven and flexible
+
+- Cloud-side decoding is centralized and easy to maintain
+
+- Event codes are numeric, no zero-padding required
